vbnc/vbnc/tests/Errors/30038.vb
Imports System
Imports System.IO
Public Module modmain
    Dim f As Object
    Sub Main()
        Do While Not f

        Loop
    End Sub
End Module